test/errors/objectlit1.input.asm

* = $801

!let obj = { a: 1 + b }     ; undeclared var 'a'

    lda #obj.a              ; no error here
